Add NBT allocation size limit